--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
+ <!DOCTYPE html>
 <html>
-	<h1>Петров Павел Алексеевич</h1>
+  <head>
+  
+	<link href="style.css" rel="stylesheet" />
+	
+	<title>WebSite by.Pasha Petrov</title>
+	
+  </head>
+  
+	<body>
+	
+	<h1 class = "header">Петров Павел Алексеевич</h1>
 	<a href="mailto:pashka21rus19@gmail.com">My mail</a>
 	<p>Мне 16. Закончил 9 класс в МБОУ "СОШ №43". Занимаюсь футболом более 5 лет.</p>
+	
+	</body>
+	
 </html>
