--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1 class = "header">Петров Павел Алексеевич</h1>
 	<a href="mailto:pashka21rus19@gmail.com">My mail</a>
 	<p>Мне 16. Закончил 9 класс в МБОУ "СОШ №43". Занимаюсь футболом более 5 лет.</p>
-	
+	<p class = "header2">Is it easy?</p>
 	</body>
 	
 </html>
