--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
  <!DOCTYPE html>
 <html>
-  <head>
+ <head>
   
 	<link href="style.css" rel="stylesheet" />
 	
 	<title>WebSite by.Pasha Petrov</title>
 	
-  </head>
+ </head>
   
 	<body>
-	
-	<h1 class = "header">Петров Павел Алексеевич</h1>
-	<a href="mailto:pashka21rus19@gmail.com">My mail</a>
-	<p>Мне 16. Закончил 9 класс в МБОУ "СОШ №43". Занимаюсь футболом более 5 лет.</p>
-	<p class = "header2">Is it easy?</p>
+	  <div class = "header">
+		 <h1 class = "h1"> Петров Павел Алексеевич </h1>
+		 <a class = "link" href = "mailto:pashka21rus19@gmail.com"> My mail </a>
+		 <p class = "text"> Мне 16. Закончил 9 класс в МБОУ "СОШ №43". Занимаюсь футболом более 5 лет.</p>
+		 <p class = "text">Is it easy?</p>
+	  </div>
 	</body>
 	
 </html>
