--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
  <!DOCTYPE html>
 <html>
  <head>
-  
 	<link href="style.css" rel="stylesheet" />
-	
 	<title>WebSite by.Pasha Petrov</title>
-	
  </head>
   
 	<body>
-	  <div class = "header">
+	  <div class = "header container">
 		 <h1 class = "h1"> Петров Павел Алексеевич </h1>
 		 <a class = "link" href = "mailto:pashka21rus19@gmail.com"> My mail </a>
 		 <p class = "text"> Мне 16. Закончил 9 класс в МБОУ "СОШ №43". Занимаюсь футболом более 5 лет.</p>
 		 <p class = "text">Is it easy?</p>
 	  </div>
+	  
+	 <div class = "feedback container">
+		<p>Напиши мне, Друг!</p>
+		
+		<form class = "form">
+			<input class = "form__input" placeholder="тык на меня" type="text" />
+		</form>
+		
+	 </div>
 	</body>
 	
 </html>
