--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		
 		<form class = "form">
 			<input class = "form__input" placeholder="тык на меня" type="text" />
+			<input class = "form__input" placeholder="тык, твой email" type="mail" />
+			<button class = "form__button">Отправить!</button>
 		</form>
 		
 	 </div>
