--- a/index.html
+++ b/index.html
@@ -8,21 +8,34 @@
 	<body>
 	  <div class = "header container">
 		 <h1 class = "h1"> Петров Павел Алексеевич </h1>
-		 <a class = "link" href = "mailto:pashka21rus19@gmail.com"> My mail </a>
+		 <a class = "link" href = "https://vk.com/diligeeent"> vk.com </a>
 		 <p class = "text"> Мне 16. Закончил 9 класс в МБОУ "СОШ №43". Занимаюсь футболом более 5 лет.</p>
 		 <p class = "text">Is it easy?</p>
 	  </div>
 	  
 	 <div class = "feedback container">
+	 
 		<p>Напиши мне, Друг!</p>
 		
 		<form class = "form">
 			<input class = "form__input" placeholder="тык на меня" type="text" />
 			<input class = "form__input" placeholder="тык, твой email" type="mail" />
+			
+			  <select class = "knopka">
+			     <option disabled> Форма сообщения </option>
+				 <option> Обратная связь </option>
+				 <option> Позвони мне </option>
+				 <option> Поддержка </option>
+			  </select>
+			  
+			  
+			<textarea class "window"> </textarea>
+			
 			<button class = "form__button">Отправить!</button>
 		</form>
 		
 	 </div>
+	 
 	</body>
 	
 </html>
