--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	  <div class = "header container">
 		 <h1 class = "h1"> Петров Павел Алексеевич </h1>
 		 <a class = "link" href = "https://vk.com/diligeeent"> vk.com </a>
-		 <p class = "text"> Мне 16. Закончил 9 класс в МБОУ "СОШ №43". Занимаюсь футболом более 5 лет.</p>
-		 <p class = "text">Is it easy?</p>
+		 <p class = "text"> I'm a killer Killua, Killua, Killua!</p>
+		 <p class = "text"> Ты крут, что у тебя есть все эти цели. У меня нет плана… я не знаю, что мне делать со своей жизнью - Killua</p>
 	  </div>
 	  
 	 <div class = "feedback container">
